Add Stripe payment integration with secure configuration
- Implement complete Stripe checkout flow
- Add authentication-based cart access controls
- Secure API key management with development-only config
- Add payment success/failure handling
- Clean up example API keys from documentation

--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,11 @@ bld/
 msbuild.log
 msbuild.err
 msbuild.wrn
+
+# Configuration files with secrets
+**/appsettings.Development.json
+**/appsettings.Local.json
+
+# Environment variables
+.env
+.env.local
