--- a/EShop.Web/appsettings.json
+++ b/EShop.Web/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=EShopProekt;TrustServerCertificate=True;Integrated Security=True"
+    "DefaultConnection": "Data Source=EShopProekt.db"
   },
   "Logging": {
     "LogLevel": {
@@ -16,6 +16,11 @@
     "EnableSsl": true,
     "EmailDisplayName": "EShop Application",
     "SendersName": "EShop Application"
+  },
+  "Stripe": {
+    "PublishableKey": "pk_test_YOUR_PUBLISHABLE_KEY_HERE",
+    "SecretKey": "sk_test_YOUR_SECRET_KEY_HERE",
+    "WebhookSecret": "whsec_YOUR_WEBHOOK_SECRET_HERE"
   },
   "AllowedHosts": "*"
 }
